--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     align-items: center;
     height: 100vh;
     margin: 0;
-    overflow: hidden;
   }
 
   .container {
@@ -41,12 +40,6 @@
     text-align: center;
     max-width: 500px;
     width: 95%;
-    animation: fadeIn 1s ease-in-out;
-  }
-
-  @keyframes fadeIn {
-    from {opacity: 0; transform: translateY(-20px);}
-    to {opacity: 1; transform: translateY(0);}
   }
 
   h1 {
@@ -57,30 +50,35 @@
     text-shadow: 0 0 10px #ffd700, 0 0 20px #ffd70066, 0 0 30px #ffd70033;
   }
 
+  .input-group {
+    position: relative;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
   input, textarea {
     width: 100%;
     padding: 16px 22px;
     border-radius: 15px;
     border: none;
-    margin-bottom: 20px;
     font-size: 18px;
     font-family: 'Tajawal', sans-serif;
     background: rgba(255,255,255,0.05);
     color: var(--white);
     box-shadow: 0 0 8px rgba(255,255,255,0.1);
     transition: 0.3s;
+    outline: none;
   }
 
-  /* Underlined placeholders with blue glow */
+  /* Placeholder underlined nicely */
   input::placeholder, textarea::placeholder {
     color: var(--blue);
     text-decoration: underline;
     text-underline-offset: 4px;
-    font-weight: bold;
+    font-weight: 500;
   }
 
   input:focus, textarea:focus {
-    outline: none;
     box-shadow: var(--glow);
   }
 
@@ -136,23 +134,25 @@
     box-shadow: 0 0 25px #fff, 0 0 50px #fff33;
   }
 
-  .emoji {
-    font-size: 26px;
-    margin-right: 10px;
-  }
 </style>
 </head>
 <body>
 
 <div class="container">
   <h1>👻 Ghosty Urdu Converter</h1>
-  <input type="text" id="englishText" placeholder="Type English words here... ✍️">
-  <button class="convert-btn" onclick="convertToUrdu()">🪄 Convert to Urdu</button>
-  <textarea id="urduText" placeholder="Urdu text appears here... ✨" readonly></textarea>
-  <div>
-    <button class="copy-btn" onclick="copyUrdu()">📋 Copy</button>
-    <button class="whatsapp-btn" onclick="joinGroup()">👥 Join WhatsApp Group</button>
+
+  <div class="input-group">
+    <input type="text" id="englishText" placeholder="Type English words here... ✍️">
   </div>
+
+  <button class="convert-btn" onclick="convertToUrdu()">🪄 Convert to Urdu</button>
+
+  <div class="input-group">
+    <textarea id="urduText" placeholder="Urdu text appears here... ✨" readonly></textarea>
+  </div>
+
+  <button class="copy-btn" onclick="copyUrdu()">📋 Copy</button>
+  <button class="whatsapp-btn" onclick="joinGroup()">👥 Join WhatsApp Group</button>
 </div>
 
 <script>
