--- a/index.html
+++ b/index.html
@@ -4,146 +4,99 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>👻 Ghosty Urdu Converter</title>
-
-<!-- Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Almarai:wght@400;700&family=Tajawal:wght@400;700&family=Cairo:wght@400;700&family=Noto+Nastaliq+Urdu&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Almarai:wght@400;700&family=Tajawal:wght@400;700&family=Noto+Nastaliq+Urdu&display=swap" rel="stylesheet">
 <style>
-  /* Ghosty Dark Theme */
-  :root {
-    --bg: #05060a;
-    --card: rgba(20, 25, 40, 0.95);
-    --blue: #1a75ff;
-    --green: #00ff7f;
-    --yellow: #ffd700;
-    --white: #ffffff;
-    --shadow: 0 8px 25px rgba(0,0,0,0.8);
-    --glow: 0 0 12px #1a75ff, 0 0 20px #1a75ff66, 0 0 30px #1a75ff44;
-  }
-
   body {
-    font-family: 'Cairo', sans-serif;
-    background: var(--bg);
-    color: var(--white);
+    margin: 0;
+    background: #05060a;
+    font-family: 'Tajawal', sans-serif;
+    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 0;
   }
 
-  .container {
-    background: var(--card);
-    padding: 40px 30px;
+  .converter-card {
+    background: rgba(20,25,40,0.95);
+    padding: 30px;
     border-radius: 25px;
-    box-shadow: var(--shadow);
-    text-align: center;
-    max-width: 500px;
+    max-width: 550px;
     width: 95%;
+    box-shadow: 0 8px 25px rgba(0,0,0,0.8);
   }
 
-  h1 {
+  .converter-card h1 {
     font-family: 'Almarai', sans-serif;
-    font-size: 36px;
-    color: var(--yellow);
-    margin-bottom: 25px;
-    text-shadow: 0 0 10px #ffd700, 0 0 20px #ffd70066, 0 0 30px #ffd70033;
+    text-align: center;
+    color: #ffd700;
+    text-shadow: 0 0 10px #ffd700, 0 0 20px #ffd70066;
+    margin-bottom: 30px;
   }
 
-  .input-group {
-    position: relative;
+  .input-box, .output-box {
     width: 100%;
-    margin-bottom: 20px;
-  }
-
-  /* Input box with blue background */
-  input {
-    width: 100%;
-    padding: 16px 22px;
+    padding: 16px 20px;
     border-radius: 15px;
     border: none;
     font-size: 18px;
-    font-family: 'Tajawal', sans-serif;
-    background: var(--blue);
-    color: var(--white);
-    box-shadow: 0 0 8px rgba(0,0,0,0.3);
-    transition: 0.3s;
-    outline: none;
+    margin-bottom: 20px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
   }
 
-  input::placeholder {
+  .input-box {
+    background: #1a75ff; /* blue input box */
+    color: #fff;
+  }
+
+  .input-box::placeholder {
     color: #cce0ff;
+    text-decoration: underline;
+    text-underline-offset: 4px;
     font-weight: 500;
-    text-decoration: underline;
-    text-underline-offset: 4px;
   }
 
-  input:focus {
-    box-shadow: var(--glow);
-  }
-
-  /* Output textarea with any nice Ghosty color */
-  textarea {
-    width: 100%;
-    padding: 16px 22px;
-    border-radius: 15px;
-    border: none;
+  .output-box {
+    background: rgba(255,255,255,0.05);
+    color: #fff;
     font-family: 'Noto Nastaliq Urdu', 'Tajawal', sans-serif;
-    font-size: 24px;
-    resize: none;
+    font-size: 22px;
     text-align: right;
-    line-height: 1.5;
-    background: rgba(255, 255, 255, 0.05);
-    color: var(--white);
-    box-shadow: 0 0 10px rgba(255,255,255,0.1);
-    transition: 0.3s;
+    min-height: 130px;
   }
 
-  textarea::placeholder {
-    color: #ccc;
-    text-decoration: underline;
-    text-underline-offset: 4px;
-  }
-
-  button {
-    padding: 16px 25px;
-    margin: 8px 0;
+  .button {
+    width: 100%;
+    padding: 16px;
     border: none;
     border-radius: 18px;
-    cursor: pointer;
-    font-weight: bold;
     font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    margin-bottom: 15px;
     transition: 0.3s;
-    text-shadow: 0 0 5px #000;
   }
 
   .convert-btn {
-    background: var(--blue);
-    color: var(--white);
-    width: 100%;
-    font-size: 20px;
-    box-shadow: var(--glow);
+    background: #3fa9ff;
+    color: #fff;
+    box-shadow: 0 0 12px #3fa9ff, 0 0 25px #3fa9ff44;
   }
 
   .copy-btn {
-    background: var(--green);
-    color: var(--white);
-    width: 100%;
-    font-size: 20px;
-    box-shadow: 0 0 8px #00ff7f, 0 0 16px #00ff7f55;
+    background: #00ff7f;
+    color: #000;
+    box-shadow: 0 0 12px #00ff7f, 0 0 25px #00ff7f44;
   }
 
   .whatsapp-btn {
     background: #25d366;
-    color: var(--white);
-    width: 100%;
-    font-size: 20px;
-    margin-top: 10px;
-    box-shadow: 0 0 10px #25d366, 0 0 20px #25d36655;
+    color: #fff;
+    box-shadow: 0 0 12px #25d366, 0 0 25px #25d36644;
   }
 
-  button:hover {
-    transform: scale(1.06);
+  .button:hover {
+    transform: scale(1.05);
     box-shadow: 0 0 25px #fff, 0 0 50px #fff33;
   }
 
@@ -151,25 +104,20 @@
 </head>
 <body>
 
-<div class="container">
+<div class="converter-card">
   <h1>👻 Ghosty Urdu Converter</h1>
 
-  <div class="input-group">
-    <input type="text" id="englishText" placeholder="Type English words here... ✍️">
-  </div>
+  <input class="input-box" type="text" id="englishText" placeholder="Type English words here... ✍️">
 
-  <button class="convert-btn" onclick="convertToUrdu()">🪄 Convert to Urdu</button>
+  <button class="button convert-btn" onclick="convertToUrdu()">🪄 Convert to Urdu</button>
 
-  <div class="input-group">
-    <textarea id="urduText" placeholder="Urdu text appears here... ✨" readonly></textarea>
-  </div>
+  <textarea class="output-box" id="urduText" placeholder="Urdu text will appear here..." readonly></textarea>
 
-  <button class="copy-btn" onclick="copyUrdu()">📋 Copy</button>
-  <button class="whatsapp-btn" onclick="joinGroup()">👥 Join WhatsApp Group</button>
+  <button class="button copy-btn" onclick="copyUrdu()">📋 Copy</button>
+  <button class="button whatsapp-btn" onclick="joinGroup()">👥 Join WhatsApp Group</button>
 </div>
 
 <script>
-  // English → Urdu mapping (basic)
   const urduMap = {
     'a':'ا','b':'ب','c':'ک','d':'د','e':'ے','f':'ف','g':'گ','h':'ہ','i':'ی',
     'j':'ج','k':'ک','l':'ل','m':'م','n':'ن','o':'و','p':'پ','q':'ق','r':'ر',
@@ -179,9 +127,7 @@
   function convertToUrdu() {
     const input = document.getElementById('englishText').value.toLowerCase();
     let result = '';
-    for(let char of input) {
-      result += urduMap[char] || char;
-    }
+    for(let char of input) result += urduMap[char] || char;
     document.getElementById('urduText').value = result;
   }
 
@@ -194,8 +140,7 @@
   }
 
   function joinGroup() {
-    const groupLink = 'https://chat.whatsapp.com/HVM9Spvm7HVGLERj8yo9kS';
-    window.open(groupLink, '_blank');
+    window.open('https://chat.whatsapp.com/HVM9Spvm7HVGLERj8yo9kS', '_blank');
   }
 </script>
 
