--- a/index.html
+++ b/index.html
@@ -3,100 +3,81 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ghosty Branding</title>
+<title>Any Language to Urdu • Ghosty</title>
 
 <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Orbitron:wght@500;700&family=Noto+Nastaliq+Urdu:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
-    body {
-        margin: 0;
-        padding: 0;
-        min-height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: radial-gradient(circle at top, #0a1a3a, #000);
-        font-family: 'Poppins', sans-serif;
-        color: #fff;
+    body{
+        margin:0;
+        padding:0;
+        min-height:100vh;
+        display:flex;
+        justify-content:center;
+        align-items:center;
+        background:radial-gradient(circle at top,#0a1a3a,#000);
+        font-family:'Poppins',sans-serif;
+        color:#fff;
     }
-
-    .card {
-        background: rgba(0, 0, 0, 0.6);
-        backdrop-filter: blur(10px);
-        border-radius: 18px;
-        padding: 35px 25px;
-        max-width: 360px;
-        width: 100%;
-        text-align: center;
-        box-shadow: 0 0 30px rgba(0, 140, 255, 0.4);
-        border: 1px solid rgba(0, 140, 255, 0.4);
+    .card{
+        background:rgba(0,0,0,.6);
+        backdrop-filter:blur(10px);
+        border-radius:18px;
+        padding:30px 22px;
+        max-width:380px;
+        width:100%;
+        text-align:center;
+        box-shadow:0 0 30px rgba(0,140,255,.4);
+        border:1px solid rgba(0,140,255,.4);
     }
-
-    .brand {
-        font-family: 'Orbitron', sans-serif;
-        font-size: 28px;
-        font-weight: 700;
-        letter-spacing: 2px;
-        color: #4fc3ff;
-        text-shadow: 0 0 10px rgba(79, 195, 255, 0.9);
-        margin-bottom: 10px;
+    .brand{
+        font-family:'Orbitron',sans-serif;
+        font-size:26px;
+        letter-spacing:2px;
+        color:#4fc3ff;
+        text-shadow:0 0 10px rgba(79,195,255,.9);
+        margin-bottom:6px;
     }
-
-    .subtitle {
-        font-size: 14px;
-        color: #cfd8dc;
-        margin-bottom: 25px;
+    .subtitle{
+        font-size:14px;
+        color:#cfd8dc;
+        margin-bottom:18px;
     }
-
-    .btn-whatsapp {
-        display: inline-block;
-        width: 100%;
-        padding: 16px;
-        font-size: 18px;
-        font-weight: 600;
-        color: #fff;
-        text-decoration: none;
-        border-radius: 50px;
-        background: linear-gradient(135deg, #25D366, #1ebe5d);
-        box-shadow: 0 0 20px rgba(37, 211, 102, 0.7);
-        transition: transform 0.2s ease, box-shadow 0.2s ease;
+    textarea{
+        width:100%;
+        min-height:110px;
+        border-radius:12px;
+        border:none;
+        padding:12px;
+        margin-bottom:12px;
+        resize:none;
+        outline:none;
+        font-size:14px;
+        background:rgba(255,255,255,.08);
+        color:#fff;
     }
-
-    .btn-whatsapp:hover {
-        transform: scale(1.05);
-        box-shadow: 0 0 30px rgba(37, 211, 102, 1);
+    textarea.output{
+        font-family:'Noto Nastaliq Urdu',serif;
+        font-size:16px;
+        direction:rtl;
+        text-align:right;
     }
-
-    .footer {
-        margin-top: 25px;
-        font-size: 12px;
-        color: #90caf9;
-        opacity: 0.85;
+    .btn{
+        display:inline-block;
+        width:100%;
+        padding:14px;
+        font-size:16px;
+        font-weight:600;
+        color:#fff;
+        border:none;
+        border-radius:50px;
+        background:linear-gradient(135deg,#2196f3,#21cbf3);
+        box-shadow:0 0 20px rgba(33,150,243,.6);
+        cursor:pointer;
+        transition:.2s;
+        margin-bottom:14px;
     }
-
-    .footer span {
-        color: #4fc3ff;
-        font-weight: 600;
-    }
-</style>
-</head>
-
-<body>
-
-<div class="card">
-    <div class="brand">GHOSTY</div>
-    <div class="subtitle">Join our official WhatsApp Group</div>
-
-    <!-- Replace the link below with your WhatsApp group invite link -->
-    <a class="btn-whatsapp" href="https://chat.whatsapp.com/YOUR_GROUP_LINK" target="_blank">
-        Join WhatsApp Group
-    </a>
-
-    <div class="footer">
-        Developed by <span>Ghosty</span>
-    </div>
-</div>
-
-</body>
-</html>
+    .btn:hover{
+        transform:scale(1.04);
+        box-shadow:0 0 30px rgba(33,150,243
