--- a/index.html
+++ b/index.html
@@ -3,104 +3,102 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Any Language to Urdu • Ghosty</title>
+<title>English to Urdu Translator • Ghosty</title>
 
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Orbitron:wght@500;700&family=Noto+Nastaliq+Urdu:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
-    body{
-        margin:0;
-        padding:0;
-        min-height:100vh;
-        display:flex;
-        justify-content:center;
-        align-items:center;
-        background:radial-gradient(circle at top,#0a1a3a,#000);
-        font-family:'Poppins',sans-serif;
-        color:#fff;
-    }
-    .card{
-        background:rgba(0,0,0,.6);
-        backdrop-filter:blur(10px);
-        border-radius:18px;
-        padding:30px 22px;
-        max-width:380px;
-        width:100%;
-        text-align:center;
-        box-shadow:0 0 30px rgba(0,140,255,.4);
-        border:1px solid rgba(0,140,255,.4);
-    }
-    .brand{
-        font-family:'Orbitron',sans-serif;
-        font-size:26px;
-        letter-spacing:2px;
-        color:#4fc3ff;
-        text-shadow:0 0 10px rgba(79,195,255,.9);
-        margin-bottom:6px;
-    }
-    .subtitle{
-        font-size:14px;
-        color:#cfd8dc;
-        margin-bottom:18px;
-    }
-    textarea{
-        width:100%;
-        min-height:110px;
-        border-radius:12px;
-        border:none;
-        padding:12px;
-        margin-bottom:12px;
-        resize:none;
-        outline:none;
-        font-size:14px;
-        background:rgba(255,255,255,.08);
-        color:#fff;
-    }
-    textarea.output{
-        font-family:'Noto Nastaliq Urdu',serif;
-        font-size:16px;
-        direction:rtl;
-        text-align:right;
-    }
-    .btn{
-        display:inline-block;
-        width:100%;
-        padding:14px;
-        font-size:16px;
-        font-weight:600;
-        color:#fff;
-        border:none;
-        border-radius:50px;
-        background:linear-gradient(135deg,#2196f3,#21cbf3);
-        box-shadow:0 0 20px rgba(33,150,243,.6);
-        cursor:pointer;
-        transition:.2s;
-        margin-bottom:14px;
-    }
-    .btn:hover{
-        transform:scale(1.04);
-        box-shadow:0 0 30px rgba(33,150,243,1);
-    }
-    .btn-whatsapp{
-        display:block;
-        text-decoration:none;
-        padding:14px;
-        border-radius:50px;
-        background:linear-gradient(135deg,#25D366,#1ebe5d);
-        box-shadow:0 0 20px rgba(37,211,102,.7);
-        color:#fff;
-        font-weight:600;
-    }
-    .footer{
-        margin-top:16px;
-        font-size:12px;
-        color:#90caf9;
-    }
-    .footer span{
-        color:#4fc3ff;
-        font-weight:600;
-    }
+body{
+    margin:0;
+    padding:0;
+    min-height:100vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    background:radial-gradient(circle at top,#0a1a3a,#000);
+    font-family:'Poppins',sans-serif;
+    color:#fff;
+}
+.card{
+    background:rgba(0,0,0,.65);
+    backdrop-filter:blur(12px);
+    border-radius:18px;
+    padding:30px 22px;
+    max-width:400px;
+    width:100%;
+    text-align:center;
+    box-shadow:0 0 35px rgba(0,140,255,.4);
+    border:1px solid rgba(0,140,255,.4);
+}
+.brand{
+    font-family:'Orbitron',sans-serif;
+    font-size:26px;
+    letter-spacing:2px;
+    color:#4fc3ff;
+    text-shadow:0 0 12px rgba(79,195,255,.9);
+}
+.subtitle{
+    font-size:14px;
+    color:#cfd8dc;
+    margin-bottom:18px;
+}
+textarea{
+    width:100%;
+    min-height:110px;
+    border-radius:12px;
+    border:none;
+    padding:12px;
+    margin-bottom:12px;
+    resize:none;
+    outline:none;
+    font-size:14px;
+    background:rgba(255,255,255,.08);
+    color:#fff;
+}
+textarea#output{
+    font-family:'Noto Nastaliq Urdu',serif;
+    font-size:16px;
+    direction:rtl;
+    text-align:right;
+}
+button{
+    width:100%;
+    padding:14px;
+    font-size:16px;
+    font-weight:600;
+    color:#fff;
+    border:none;
+    border-radius:50px;
+    background:linear-gradient(135deg,#2196f3,#21cbf3);
+    box-shadow:0 0 20px rgba(33,150,243,.6);
+    cursor:pointer;
+    transition:.2s;
+}
+button:hover{
+    transform:scale(1.05);
+    box-shadow:0 0 30px rgba(33,150,243,1);
+}
+.whatsapp{
+    display:block;
+    margin-top:14px;
+    padding:14px;
+    border-radius:50px;
+    text-decoration:none;
+    background:linear-gradient(135deg,#25D366,#1ebe5d);
+    box-shadow:0 0 20px rgba(37,211,102,.7);
+    color:#fff;
+    font-weight:600;
+}
+.footer{
+    margin-top:16px;
+    font-size:12px;
+    color:#90caf9;
+}
+.footer span{
+    color:#4fc3ff;
+    font-weight:600;
+}
 </style>
 </head>
 
@@ -108,16 +106,16 @@
 
 <div class="card">
     <div class="brand">GHOSTY</div>
-    <div class="subtitle">Any Language → Urdu Translator</div>
+    <div class="subtitle">English → Urdu Translator</div>
 
-    <textarea id="inputText" placeholder="Enter text in any language..."></textarea>
+    <textarea id="input" placeholder="Enter English text here..."></textarea>
 
-    <button class="btn" onclick="translateText()">Translate to Urdu</button>
+    <button onclick="translateText()">Translate to Urdu</button>
 
-    <textarea id="outputText" class="output" placeholder="اردو ترجمہ یہاں ظاہر ہوگا"></textarea>
+    <textarea id="output" placeholder="اردو ترجمہ یہاں ظاہر ہوگا"></textarea>
 
     <!-- Replace with your WhatsApp group link -->
-    <a class="btn-whatsapp" href="https://chat.whatsapp.com/YOUR_GROUP_LINK" target="_blank">
+    <a class="whatsapp" href="https://chat.whatsapp.com/YOUR_GROUP_LINK" target="_blank">
         Join WhatsApp Group
     </a>
 
@@ -127,20 +125,26 @@
 </div>
 
 <script>
-/*
- NOTE:
- This is UI + demo logic only.
- For REAL "Any Language to Urdu" translation,
- connect this button to a translation API (Google, Libre, etc.)
-*/
 function translateText(){
-    var input = document.getElementById("inputText").value;
-    if(!input){
-        alert("Please enter some text");
+    let text = document.getElementById("input").value.trim();
+    if(text === ""){
+        alert("Please enter English text");
         return;
     }
-    document.getElementById("outputText").value =
-        "یہ صرف ڈیمو انٹرفیس ہے۔ اصل ترجمہ کے لیے API شامل کریں۔";
+
+    document.getElementById("output").value = "Translating...";
+
+    fetch("https://api.mymemory.translated.net/get?q=" 
+          + encodeURIComponent(text) + "&langpair=en|ur")
+    .then(response => response.json())
+    .then(data => {
+        document.getElementById("output").value =
+            data.responseData.translatedText;
+    })
+    .catch(error => {
+        document.getElementById("output").value =
+            "Error! Please try again.";
+    });
 }
 </script>
 
