--- a/index.html
+++ b/index.html
@@ -5,79 +5,75 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>English to Urdu Translator • Ghosty</title>
 
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Orbitron:wght@500;700&family=Noto+Nastaliq+Urdu:wght@400;700&display=swap" rel="stylesheet">
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Orbitron:wght@600;700&family=Noto+Nastaliq+Urdu:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
 body{
     margin:0;
-    padding:0;
     min-height:100vh;
     display:flex;
-    justify-content:center;
     align-items:center;
+    justify-content:center;
     background:radial-gradient(circle at top,#0a1a3a,#000);
     font-family:'Poppins',sans-serif;
     color:#fff;
 }
 .card{
+    width:100%;
+    max-width:400px;
+    padding:28px 22px;
+    border-radius:18px;
     background:rgba(0,0,0,.65);
     backdrop-filter:blur(12px);
-    border-radius:18px;
-    padding:30px 22px;
-    max-width:400px;
-    width:100%;
-    text-align:center;
-    box-shadow:0 0 35px rgba(0,140,255,.4);
+    box-shadow:0 0 35px rgba(0,140,255,.45);
     border:1px solid rgba(0,140,255,.4);
+    text-align:center;
 }
 .brand{
     font-family:'Orbitron',sans-serif;
     font-size:26px;
-    letter-spacing:2px;
     color:#4fc3ff;
     text-shadow:0 0 12px rgba(79,195,255,.9);
 }
 .subtitle{
     font-size:14px;
     color:#cfd8dc;
-    margin-bottom:18px;
+    margin-bottom:16px;
 }
 textarea{
     width:100%;
     min-height:110px;
-    border-radius:12px;
     border:none;
+    border-radius:12px;
     padding:12px;
     margin-bottom:12px;
-    resize:none;
-    outline:none;
-    font-size:14px;
     background:rgba(255,255,255,.08);
     color:#fff;
+    outline:none;
+    resize:none;
 }
-textarea#output{
+#output{
     font-family:'Noto Nastaliq Urdu',serif;
-    font-size:16px;
     direction:rtl;
     text-align:right;
+    font-size:16px;
 }
 button{
     width:100%;
     padding:14px;
+    border:none;
+    border-radius:50px;
     font-size:16px;
     font-weight:600;
     color:#fff;
-    border:none;
-    border-radius:50px;
     background:linear-gradient(135deg,#2196f3,#21cbf3);
-    box-shadow:0 0 20px rgba(33,150,243,.6);
+    box-shadow:0 0 20px rgba(33,150,243,.7);
     cursor:pointer;
     transition:.2s;
 }
 button:hover{
     transform:scale(1.05);
-    box-shadow:0 0 30px rgba(33,150,243,1);
 }
 .whatsapp{
     display:block;
@@ -91,13 +87,12 @@ button:hover{
     font-weight:600;
 }
 .footer{
-    margin-top:16px;
+    margin-top:14px;
     font-size:12px;
     color:#90caf9;
 }
 .footer span{
     color:#4fc3ff;
-    font-weight:600;
 }
 </style>
 </head>
@@ -108,13 +103,12 @@ button:hover{
     <div class="brand">GHOSTY</div>
     <div class="subtitle">English → Urdu Translator</div>
 
-    <textarea id="input" placeholder="Enter English text here..."></textarea>
+    <textarea id="input" placeholder="Enter English text..."></textarea>
 
     <button onclick="translateText()">Translate to Urdu</button>
 
     <textarea id="output" placeholder="اردو ترجمہ یہاں ظاہر ہوگا"></textarea>
 
-    <!-- Replace with your WhatsApp group link -->
     <a class="whatsapp" href="https://chat.whatsapp.com/YOUR_GROUP_LINK" target="_blank">
         Join WhatsApp Group
     </a>
@@ -126,24 +120,32 @@ button:hover{
 
 <script>
 function translateText(){
-    let text = document.getElementById("input").value.trim();
-    if(text === ""){
+    const text = document.getElementById("input").value.trim();
+    if(!text){
         alert("Please enter English text");
         return;
     }
 
-    document.getElementById("output").value = "Translating...";
+    document.getElementById("output").value = "ترجمہ ہو رہا ہے...";
 
-    fetch("https://api.mymemory.translated.net/get?q=" 
-          + encodeURIComponent(text) + "&langpair=en|ur")
-    .then(response => response.json())
-    .then(data => {
-        document.getElementById("output").value =
-            data.responseData.translatedText;
+    fetch("https://libretranslate.de/translate",{
+        method:"POST",
+        headers:{
+            "Content-Type":"application/json"
+        },
+        body:JSON.stringify({
+            q:text,
+            source:"en",
+            target:"ur",
+            format:"text"
+        })
     })
-    .catch(error => {
-        document.getElementById("output").value =
-            "Error! Please try again.";
+    .then(res=>res.json())
+    .then(data=>{
+        document.getElementById("output").value = data.translatedText;
+    })
+    .catch(()=>{
+        document.getElementById("output").value = "Translation failed. Try again.";
     });
 }
 </script>
