--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>English to Urdu Translator • Ghosty</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Orbitron:wght@600;700&family=Noto+Nastaliq+Urdu:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Orbitron:wght@600;700&display=swap" rel="stylesheet">
 
 <style>
 body{
     margin:0;
     min-height:100vh;
     display:flex;
-    align-items:center;
     justify-content:center;
+    align-items:center;
     background:radial-gradient(circle at top,#0a1a3a,#000);
     font-family:'Poppins',sans-serif;
     color:#fff;
 }
 .card{
     width:100%;
-    max-width:400px;
-    padding:28px 22px;
+    max-width:420px;
+    padding:26px 20px;
     border-radius:18px;
     background:rgba(0,0,0,.65);
     backdrop-filter:blur(12px);
@@ -38,11 +38,11 @@ body{
 .subtitle{
     font-size:14px;
     color:#cfd8dc;
-    margin-bottom:16px;
+    margin-bottom:14px;
 }
 textarea{
     width:100%;
-    min-height:110px;
+    min-height:90px;
     border:none;
     border-radius:12px;
     padding:12px;
@@ -51,12 +51,6 @@ textarea{
     color:#fff;
     outline:none;
     resize:none;
-}
-#output{
-    font-family:'Noto Nastaliq Urdu',serif;
-    direction:rtl;
-    text-align:right;
-    font-size:16px;
 }
 button{
     width:100%;
@@ -70,19 +64,20 @@ button{
     box-shadow:0 0 20px rgba(33,150,243,.7);
     cursor:pointer;
 }
-.whatsapp{
-    display:block;
+.copy-btn{
+    margin-top:10px;
+    background:linear-gradient(135deg,#ff9800,#ff5722);
+}
+iframe{
+    width:100%;
+    height:230px;
+    border:none;
+    border-radius:12px;
     margin-top:14px;
-    padding:14px;
-    border-radius:50px;
-    text-decoration:none;
-    background:linear-gradient(135deg,#25D366,#1ebe5d);
-    box-shadow:0 0 20px rgba(37,211,102,.7);
-    color:#fff;
-    font-weight:600;
+    background:#fff;
 }
 .footer{
-    margin-top:14px;
+    margin-top:12px;
     font-size:12px;
     color:#90caf9;
 }
@@ -100,13 +95,11 @@ button{
 
     <textarea id="input" placeholder="Enter English text..."></textarea>
 
-    <button onclick="translateText()">Translate to Urdu</button>
+    <button onclick="translate()">Translate</button>
 
-    <textarea id="output" placeholder="اردو ترجمہ یہاں ظاہر ہوگا"></textarea>
+    <iframe id="translator"></iframe>
 
-    <a class="whatsapp" href="https://chat.whatsapp.com/YOUR_GROUP_LINK" target="_blank">
-        Join WhatsApp Group
-    </a>
+    <button class="copy-btn" onclick="copyText()">Copy Translated Text</button>
 
     <div class="footer">
         Developed by <span>Ghosty</span>
@@ -114,31 +107,24 @@ button{
 </div>
 
 <script>
-function translateText(){
+function translate(){
     const text = document.getElementById("input").value.trim();
     if(!text){
         alert("Please enter English text");
         return;
     }
+    const url =
+      "https://translate.google.com/?sl=en&tl=ur&text=" +
+      encodeURIComponent(text) +
+      "&op=translate";
+    document.getElementById("translator").src = url;
+}
 
-    document.getElementById("output").value = "ترجمہ ہو رہا ہے...";
-
-    const script = document.createElement("script");
-    const callbackName = "cb_" + Math.random().toString(36).substring(2);
-
-    window[callbackName] = function(response){
-        document.getElementById("output").value =
-            response.responseData.translatedText;
-        document.body.removeChild(script);
-        delete window[callbackName];
-    };
-
-    script.src =
-        "https://api.mymemory.translated.net/get?q=" +
-        encodeURIComponent(text) +
-        "&langpair=en|ur&callback=" + callbackName;
-
-    document.body.appendChild(script);
+function copyText(){
+    alert(
+      "Google Translate iframe content cannot be auto-copied due to browser security.\n\n" +
+      "Long-press inside the translation box and copy manually."
+    );
 }
 </script>
 
