--- a/index.html
+++ b/index.html
@@ -64,13 +64,9 @@ button{
     box-shadow:0 0 20px rgba(33,150,243,.7);
     cursor:pointer;
 }
-.copy-btn{
-    margin-top:10px;
-    background:linear-gradient(135deg,#ff9800,#ff5722);
-}
 iframe{
     width:100%;
-    height:230px;
+    height:240px;
     border:none;
     border-radius:12px;
     margin-top:14px;
@@ -95,11 +91,9 @@ iframe{
 
     <textarea id="input" placeholder="Enter English text..."></textarea>
 
-    <button onclick="translate()">Translate</button>
+    <button onclick="translate()">Translate to Urdu</button>
 
-    <iframe id="translator"></iframe>
-
-    <button class="copy-btn" onclick="copyText()">Copy Translated Text</button>
+    <iframe id="frame"></iframe>
 
     <div class="footer">
         Developed by <span>Ghosty</span>
@@ -113,18 +107,11 @@ function translate(){
         alert("Please enter English text");
         return;
     }
-    const url =
-      "https://translate.google.com/?sl=en&tl=ur&text=" +
-      encodeURIComponent(text) +
-      "&op=translate";
-    document.getElementById("translator").src = url;
-}
 
-function copyText(){
-    alert(
-      "Google Translate iframe content cannot be auto-copied due to browser security.\n\n" +
-      "Long-press inside the translation box and copy manually."
-    );
+    document.getElementById("frame").src =
+        "https://translate.google.com/?sl=en&tl=ur&text="
+        + encodeURIComponent(text)
+        + "&op=translate";
 }
 </script>
 
