--- a/index.html
+++ b/index.html
@@ -116,16 +116,18 @@ button{
 <script>
 async function translateText() {
     const text = document.getElementById("input").value.trim();
-    if(!text){
+    if (!text) {
         alert("Please enter English text");
         return;
     }
-
     const output = document.getElementById("output");
     output.value = "ترجمہ ہو رہا ہے...";
 
     try {
-        const response = await fetch("https://libretranslate.de/translate", {
+        const apiKey = "https://api.microsofttranslator.com/V2/Http.svc/Translate"; // <-- Replace with your Google API key
+        const url = `https://translation.googleapis.com/language/translate/v2?key=${apiKey}`;
+
+        const response = await fetch(url, {
             method: "POST",
             headers: {
                 "Content-Type": "application/json"
@@ -139,7 +141,12 @@ async function translateText() {
         });
 
         const data = await response.json();
-        output.value = data.translatedText || "ترجمہ دستیاب نہیں ہے۔";
+
+        if (data && data.data && data.data.translations && data.data.translations[0]) {
+            output.value = data.data.translations[0].translatedText;
+        } else {
+            output.value = "ترجمہ دستیاب نہیں ہے۔";
+        }
     } catch (err) {
         console.error(err);
         output.value = "Error: Translation failed.";
